made new login viewcontroller

--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -4,6 +4,152 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="N3Y-Fp-knd">
+            <objects>
+                <viewController id="EXA-CT-byF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GcJ-O3-diJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Ed-W4-y00"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gzi-iy-eVB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xp9-Lo-Epq">
+                                <rect key="frame" x="0.0" y="20" width="320" height="274"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xb8-cD-nwQ">
+                                <rect key="frame" x="0.0" y="294" width="320" height="274"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MakersFinders" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-8t-OnY">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="02r-Kq-vTn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fLX-rb-qAE">
+                                        <rect key="frame" x="0.0" y="50" width="320" height="224"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lyw-AO-rZB">
+                                                <rect key="frame" x="0.0" y="27" width="320" height="135"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TT0-GU-mvp">
+                                                        <rect key="frame" x="20" y="0.0" width="280" height="30"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="0X8-5B-dYE"/>
+                                                            <constraint firstAttribute="width" constant="280" id="iru-KG-oSZ"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pZt-SM-f8g">
+                                                        <rect key="frame" x="20" y="35" width="280" height="30"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="280" id="Gmm-lV-NNX"/>
+                                                            <constraint firstAttribute="height" constant="30" id="px1-Oq-pfP"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GEK-hV-xr8">
+                                                        <rect key="frame" x="20" y="70" width="280" height="30"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <subviews>
+                                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g20-ey-XfL">
+                                                                <rect key="frame" x="119" y="5" width="42" height="21"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="centerY" secondItem="g20-ey-XfL" secondAttribute="centerY" id="8sq-r1-LLM"/>
+                                                            <constraint firstAttribute="height" constant="30" id="Ros-65-Gef"/>
+                                                            <constraint firstAttribute="centerX" secondItem="g20-ey-XfL" secondAttribute="centerX" id="hOG-qD-mPo"/>
+                                                            <constraint firstAttribute="width" constant="280" id="myF-i4-gTG"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uUr-PK-6k4">
+                                                        <rect key="frame" x="21" y="105" width="280" height="30"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="WZY-HH-jsh"/>
+                                                            <constraint firstAttribute="width" constant="280" id="j50-xz-jKG"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Signup For MakersFinders">
+                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.64735478940000002" green="0.64735478940000002" blue="0.64735478940000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="320" id="2Fi-AN-xin"/>
+                                                    <constraint firstItem="TT0-GU-mvp" firstAttribute="top" secondItem="Lyw-AO-rZB" secondAttribute="top" id="7dc-nx-rrP"/>
+                                                    <constraint firstItem="pZt-SM-f8g" firstAttribute="top" secondItem="TT0-GU-mvp" secondAttribute="bottom" constant="5" id="B8s-GO-Hqe"/>
+                                                    <constraint firstItem="GEK-hV-xr8" firstAttribute="top" secondItem="pZt-SM-f8g" secondAttribute="bottom" constant="5" id="NPW-lt-uFn"/>
+                                                    <constraint firstAttribute="height" constant="135" id="PfM-kl-pou"/>
+                                                    <constraint firstAttribute="centerX" secondItem="TT0-GU-mvp" secondAttribute="centerX" id="UiP-J1-agx"/>
+                                                    <constraint firstAttribute="centerX" secondItem="GEK-hV-xr8" secondAttribute="centerX" id="WCZ-T0-9cF"/>
+                                                    <constraint firstItem="uUr-PK-6k4" firstAttribute="top" secondItem="GEK-hV-xr8" secondAttribute="bottom" constant="5" id="e47-DM-MTF"/>
+                                                    <constraint firstAttribute="centerX" secondItem="pZt-SM-f8g" secondAttribute="centerX" id="gyt-nx-ySx"/>
+                                                    <constraint firstItem="GEK-hV-xr8" firstAttribute="top" secondItem="pZt-SM-f8g" secondAttribute="bottom" constant="5" id="qZI-nd-2TO"/>
+                                                    <constraint firstItem="pZt-SM-f8g" firstAttribute="top" secondItem="TT0-GU-mvp" secondAttribute="bottom" constant="5" id="teY-zX-wQE"/>
+                                                    <constraint firstAttribute="bottom" secondItem="uUr-PK-6k4" secondAttribute="bottom" id="uW3-rd-Fph"/>
+                                                    <constraint firstAttribute="centerX" secondItem="uUr-PK-6k4" secondAttribute="centerX" constant="-0.5" id="zOJ-13-to5"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="centerX" secondItem="Lyw-AO-rZB" secondAttribute="centerX" id="4tH-9y-AIT"/>
+                                            <constraint firstAttribute="centerY" secondItem="Lyw-AO-rZB" secondAttribute="centerY" constant="17.5" id="Xkh-ym-zSh"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.091803485919999997" blue="0.287900765" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="fLX-rb-qAE" firstAttribute="leading" secondItem="xb8-cD-nwQ" secondAttribute="leading" id="DR5-QK-QHt"/>
+                                    <constraint firstAttribute="trailing" secondItem="fLX-rb-qAE" secondAttribute="trailing" id="NvG-sG-k3y"/>
+                                    <constraint firstAttribute="trailing" secondItem="j0o-8t-OnY" secondAttribute="trailing" id="TIf-It-jXO"/>
+                                    <constraint firstAttribute="bottom" secondItem="fLX-rb-qAE" secondAttribute="bottom" id="ofb-dy-AwR"/>
+                                    <constraint firstItem="fLX-rb-qAE" firstAttribute="top" secondItem="j0o-8t-OnY" secondAttribute="bottom" id="rcJ-wg-fIb"/>
+                                    <constraint firstItem="j0o-8t-OnY" firstAttribute="top" secondItem="xb8-cD-nwQ" secondAttribute="top" id="vyj-sO-UdX"/>
+                                    <constraint firstItem="j0o-8t-OnY" firstAttribute="leading" secondItem="xb8-cD-nwQ" secondAttribute="leading" id="x5F-ln-GZ9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Xp9-Lo-Epq" firstAttribute="leading" secondItem="gzi-iy-eVB" secondAttribute="leading" id="3fN-7r-XcC"/>
+                            <constraint firstAttribute="trailing" secondItem="Xp9-Lo-Epq" secondAttribute="trailing" id="4jY-00-aGW"/>
+                            <constraint firstItem="Xp9-Lo-Epq" firstAttribute="top" secondItem="GcJ-O3-diJ" secondAttribute="bottom" id="IL9-QC-n7x"/>
+                            <constraint firstItem="xb8-cD-nwQ" firstAttribute="top" secondItem="Xp9-Lo-Epq" secondAttribute="bottom" id="UzD-da-3E2"/>
+                            <constraint firstItem="Xp9-Lo-Epq" firstAttribute="height" secondItem="xb8-cD-nwQ" secondAttribute="height" id="gdh-ZZ-WyC"/>
+                            <constraint firstItem="Xp9-Lo-Epq" firstAttribute="width" secondItem="xb8-cD-nwQ" secondAttribute="width" id="iec-xG-Mn8"/>
+                            <constraint firstItem="xb8-cD-nwQ" firstAttribute="leading" secondItem="gzi-iy-eVB" secondAttribute="leading" id="iy5-H0-rKY"/>
+                            <constraint firstItem="5Ed-W4-y00" firstAttribute="top" secondItem="xb8-cD-nwQ" secondAttribute="bottom" id="k9H-ta-8R8"/>
+                            <constraint firstItem="xb8-cD-nwQ" firstAttribute="top" secondItem="Xp9-Lo-Epq" secondAttribute="bottom" id="p6D-qS-GBn"/>
+                            <constraint firstAttribute="trailing" secondItem="xb8-cD-nwQ" secondAttribute="trailing" id="ub1-8Y-4QG"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5nP-dw-xPD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="173" y="-1454"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="DN2-TB-hhJ">
             <objects>
